--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1"
   }
